# termicon

./: .gitignore  Cargo.toml  LICENSE  README.md  build_output.txt  check_output.txt  run_output.txt
benches/: throughput.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FULL_FEATURE_MATRIX.md  ROADMAP.md  USER_GUIDE.md
docs/modules/: BLUETOOTH.md  BRIDGE.md  CHART.md  PROTOCOLS.md  SCRIPTING.md  SERIAL.md  SSH.md  TCP_TELNET.md  TERMINAL.md
examples/: simple_serial.rs  tcp_client.rs
i18n/: en.toml  hu.toml
i18n/locales/: en.yml  hu.yml
locales/: en.yml  hu.yml
src/: lib.rs  main.rs
src/cli/: exit_codes.rs  mod.rs  pipe.rs
src/config/: mod.rs  settings.rs
src/core/: adaptive.rs  arbitration.rs  batch.rs  capability.rs  collaborative.rs  deterministic.rs  experiment.rs  explain.rs  external_api.rs  fuzzing.rs  knowledge.rs  logger.rs  macro_recorder.rs  macros.rs  mod.rs  packet.rs  protocol_dsl.rs  replay.rs  routing.rs  session.rs  simulator.rs  state_machine.rs  trigger.rs  vault.rs  workspace.rs
src/core/bluetooth/: ble.rs  device.rs  mod.rs  rfcomm.rs
src/core/bridge/: mod.rs
src/core/chart/: data.rs  export.rs  markers.rs  mod.rs  parser.rs
src/core/codec/: hex.rs  mod.rs  text.rs
src/core/file_transfer/: kermit.rs  mod.rs
src/core/plugin/: api.rs  mod.rs
src/core/profile/: mod.rs
src/core/protocol/: checksum.rs  framing.rs  kermit.rs  mod.rs  modbus.rs  modbus_monitor.rs  nmea.rs  xmodem.rs  ymodem.rs  zmodem.rs
src/core/snippet/: mod.rs
src/core/terminal/: cell.rs  color.rs  mod.rs  parser.rs  screen.rs  sixel.rs
src/core/transfer/: mod.rs
src/core/transport/: bluetooth.rs  mod.rs  serial.rs  ssh.rs  tcp.rs  telnet.rs
src/core/trigger/: advanced.rs  mod.rs
src/core/virtual_port/: mod.rs
src/gui/: accessibility.rs  ansi_parser.rs  app.rs  ble_panel.rs  chart_panel.rs  command_palette.rs  font_config.rs  keyboard.rs  macros_panel.rs  mod.rs  profiles.rs  session_tab.rs  sftp_panel.rs  split_view.rs  theme.rs  themes.rs
src/gui/views/: connection_dialog.rs  mod.rs  settings.rs  terminal.rs
src/gui/widgets/: mod.rs  status_bar.rs  status_leds.rs
src/i18n/: mod.rs
src/utils/: autoconnect.rs  mod.rs
tests/: i18n_smoke.rs
tests/integration/: mod.rs
