[package]
name = "termicon"
version = "0.1.0"
edition = "2021"
authors = ["Termicon Team"]
description = "A professional multi-platform serial terminal application with GUI and CLI support"
license = "MIT"
repository = "https://github.com/termicon/termicon"
keywords = ["serial", "terminal", "telnet", "tcp", "embedded"]
categories = ["command-line-utilities", "development-tools", "hardware-support"]
rust-version = "1.75"

[[bin]]
name = "termicon"
path = "src/main.rs"

[[bin]]
name = "termicon-cli"
path = "src/bin/cli.rs"

[lib]
name = "termicon_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Serial port
tokio-serial = "5.4"
serialport = "4.7"

# SSH
ssh2 = "0.9"

# Bluetooth (cross-platform BLE)
btleplug = "0.11"

# GUI (egui - modern, pure Rust)
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
egui_plot = "0.31"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
directories = "6.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Internationalization
rust-i18n = "3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
atty = "0.2"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
regex = "1.11"
uuid = { version = "1.16", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
rand = "0.8"
ctrlc = "3.4"

# Plugin system (optional, for dynamic libraries)
libloading = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

# Platform specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Devices_Communication"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term"] }
libc = "0.2"

# Image loading for icon
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }
mockall = "0.13"
tempfile = "3.19"
tokio-test = "0.4"

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = ["gui", "cli"]
gui = []
cli = []
